--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <title>Prompt Database</title>
-<style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; margin: 30px; }
-    h1 { text-align: center; }
-    .search { margin-bottom: 20px; width: 100%; padding: 10px; font-size: 16px; }
-    .prompt-card {
-        background: white; padding: 15px; margin-bottom: 15px;
-        border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .tag { 
-        display: inline-block; background: #ddd; padding: 3px 8px;
-        margin-right: 5px; border-radius: 5px; font-size: 12px; 
-    }
-</style>
+
+<!-- TailwindCSS CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body>
+<body class="bg-gray-100 text-gray-900">
 
-<h1>Prompt Database</h1>
+<!-- Header -->
+<div class="text-center py-10">
+    <h1 class="text-4xl font-bold mb-2">Prompt Database</h1>
+    <p class="text-gray-600">Search, filter, and explore your prompts</p>
+</div>
 
-<input id="searchBox" class="search" type="text" placeholder="Search prompts...">
+<!-- Search Bar -->
+<div class="max-w-2xl mx-auto mb-8">
+    <input
+        id="searchBox"
+        type="text"
+        placeholder="Search prompts..."
+        class="w-full px-4 py-3 rounded-xl shadow focus:ring-2 focus:ring-blue-500 outline-none"
+    />
+</div>
 
-<div id="promptList"></div>
+<!-- Prompt List -->
+<div id="promptList" class="max-w-4xl mx-auto space-y-4 px-4"></div>
 
 <script>
-// -------- ADD YOUR PROMPTS HERE --------
-const prompts = [
-    {
-        name: "YouTube Script Generator",
-        prompt: "Write a YouTube script about ____ in an engaging, humorous style.",
-        tags: ["YouTube", "Content"]
-    },
-    {
-        name: "Business Idea Generator",
-        prompt: "Generate 10 business ideas related to ____.",
-        tags: ["Business", "Creativity"]
-    },
-    {
-        name: "Essay Improver",
-        prompt: "Improve this essay by making it clearer, more formal, and more concise: ____",
-        tags: ["Writing", "Editing"]
-    }
-];
-// ---------------------------------------
+// ---- Load prompts from external JSON file ----
+async function loadPrompts() {
+    const response = await fetch("prompts.json");
+    return await response.json();
+}
 
+// ---- Render prompts ----
 function renderPrompts(list) {
     const container = document.getElementById("promptList");
     container.innerHTML = "";
+
     list.forEach(p => {
         const card = document.createElement("div");
-        card.className = "prompt-card";
+        card.className =
+            "bg-white shadow-md rounded-xl p-6 hover:shadow-lg transition";
+
         card.innerHTML = `
-            <h3>${p.name}</h3>
-            <p>${p.prompt}</p>
-            <div>${p.tags.map(t => `<span class="tag">${t}</span>`).join("")}</div>
+            <h3 class="text-xl font-semibold">${p.name}</h3>
+            <p class="mt-2 text-gray-700">${p.prompt}</p>
+            <div class="mt-3 flex flex-wrap gap-2">
+                ${p.tags
+                    .map(tag => 
+                        `<span class="bg-blue-100 text-blue-700 px-2 py-1 rounded-lg text-sm">${tag}</span>`
+                    )
+                    .join("")}
+            </div>
         `;
         container.appendChild(card);
     });
 }
 
-document.getElementById("searchBox").addEventListener("input", e => {
-    const term = e.target.value.toLowerCase();
-    const filtered = prompts.filter(p =>
-        p.name.toLowerCase().includes(term) ||
-        p.prompt.toLowerCase().includes(term) ||
-        p.tags.join(" ").toLowerCase().includes(term)
-    );
-    renderPrompts(filtered);
-});
+// ---- Search functionality ----
+function setupSearch(prompts) {
+    const input = document.getElementById("searchBox");
+    input.addEventListener("input", e => {
+        const term = e.target.value.toLowerCase();
 
-renderPrompts(prompts);
+        const filtered = prompts.filter(p =>
+            p.name.toLowerCase().includes(term) ||
+            p.prompt.toLowerCase().includes(term) ||
+            p.tags.join(" ").toLowerCase().includes(term)
+        );
+
+        renderPrompts(filtered);
+    });
+}
+
+// ---- Initialize page ----
+loadPrompts().then(prompts => {
+    renderPrompts(prompts);
+    setupSearch(prompts);
+});
 </script>
 
 </body>
