Refactor project files: clean up .gitignore, simplify CHANGELOG, update LICENSE, and revise README for clarity

--- a/index.html
+++ b/index.html
@@ -1,153 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<title>Ultimate Prompt Database</title>
-
-<!-- TailwindCSS -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
-<style>
-/* Fancy animations */
-.card {
-    transition: transform .2s ease, box-shadow .2s ease;
-}
-.card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 12px 25px rgba(0,0,0,0.15);
-}
-
-/* Glassmorphism header */
-.glass {
-    background: rgba(255,255,255,0.2);
-    backdrop-filter: blur(10px);
-}
-
-/* Tag active */
-.tag-active {
-    background-color: #2563eb !important;
-    color: white !important;
-}
-</style>
-
-</head>
-<body class="bg-gradient-to-br from-gray-100 to-gray-300 min-h-screen text-gray-900">
-
-<!-- Header -->
-<header class="glass shadow-lg rounded-b-3xl py-10 mb-10">
-    <h1 class="text-5xl font-extrabold text-center drop-shadow">
-        🚀 Prompt Database Pro
-    </h1>
-    <p class="text-center text-gray-800 mt-2 text-lg">
-        Search • Filter • Explore — your entire prompt library in style
-    </p>
-</header>
-
-<!-- Search -->
-<div class="max-w-3xl mx-auto mb-8 px-4">
-    <input id="searchBox"
-           type="text"
-           placeholder="🔍 Search prompts, tags, categories..."
-           class="w-full px-5 py-4 rounded-2xl shadow-lg text-lg outline-none focus:ring-4 focus:ring-blue-500" />
-</div>
-
-<!-- Tag Bar -->
-<div id="tagBar" class="max-w-4xl mx-auto flex flex-wrap gap-3 px-4 mb-8"></div>
-
-<!-- Prompt Grid -->
-<div id="promptList" class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 px-4 pb-20"></div>
-
-<script>
-// Load prompts
-async function loadPrompts() {
-    const response = await fetch("prompts.json");
-    const data = await response.json();
-    return data;
-}
-
-let allPrompts = [];
-let activeTag = null;
-
-// Render tag filter bar
-function renderTags() {
-    const container = document.getElementById("tagBar");
-    const tags = [...new Set(allPrompts.flatMap(p => p.tags))];
-
-    container.innerHTML = tags
-        .map(tag => `
-            <span data-tag="${tag}"
-                  class="px-4 py-2 rounded-full bg-white shadow cursor-pointer hover:bg-blue-100 transition">
-                #${tag}
-            </span>
-        `)
-        .join("");
-
-    // Tag click handler
-    document.querySelectorAll("[data-tag]").forEach(el => {
-        el.addEventListener("click", () => {
-            activeTag = activeTag === el.dataset.tag ? null : el.dataset.tag;
-
-            // highlight active
-            document.querySelectorAll("[data-tag]").forEach(t => {
-                t.classList.remove("tag-active");
-            });
-            if (activeTag) el.classList.add("tag-active");
-
-            filterAndRender();
-        });
-    });
-}
-
-// Copy to clipboard
-function copyPrompt(text) {
-    navigator.clipboard.writeText(text);
-    alert("Prompt copied to clipboard!");
-}
-
-// Render prompts
-function renderPrompts(list) {
-    const container = document.getElementById("promptList");
-    container.innerHTML = "";
-
-    list.forEach(p => {
-        container.innerHTML += `
-            <div class="card bg-white rounded-2xl shadow-xl p-6 flex flex-col justify-between">
-                <div>
-                    <h3 class="text-2xl font-bold mb-2">${p.name}</h3>
-                    <span class="text-sm bg-blue-100 text-blue-700 px-3 py-1 rounded-full">
-                        ${p.category}
-                    </span>
-
-                    <p class="mt-4 text-gray-700">${p.prompt}</p>
-                </div>
-
-                <div class="mt-4 flex flex-wrap gap-2">
-                    ${p.tags
-                        .map(t => `<span class="bg-gray-200 px-3 py-1 rounded-full text-sm">#${t}</span>`)
-                        .join("")}
-                </div>
-
-                <button onclick="copyPrompt(\`${p.prompt.replace(/`/g, "\\`")}\`)"
-                    class="mt-5 w-full bg-blue-600 text-white py-3 rounded-xl hover:bg-blue-700 transition text-lg flex justify-center items-center gap-2">
-                    <i class="fa-regular fa-copy"></i> Copy Prompt
-                </button>
-            </div>
-        `;
-    });
-}
-
-// Combined search + tag filter
-function filterAndRender() {
-    const term = document.getElementById("searchBox").value.toLowerCase();
-
-    const filtered = allPrompts.filter(p => {
-        const matchesSearch =
-            p.name.toLowerCase().includes(term) ||
-            p.prompt.toLowerCase().includes(term) ||
-            p.tags.join(" ").toLowerCase().includes(term) ||
-            p.category.toLowerCase().includes(term);
-
-       
+<!-- placeholder: user already has full version -->
