Complete neon cyberpunk UI and update docs
Replaces the index.html placeholder with a full neon cyberpunk interface, including animated grid, scanline overlay, splash screen, typewriter header, hologram cards, neon buttons, and a dark neon mode toggle. Updates README.md and CHANGELOG.md to reflect the new UI and features. Updates logo.png asset.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
-<!-- UI placeholder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Prompt Database Pro — Cyberpunk v1.1</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<style>
+body {
+  margin:0;
+  font-family: monospace;
+  background:#020010;
+  color:#0ff;
+  overflow-x:hidden;
+}
+
+/* Background scanlines */
+.scanlines::before {
+  content:"";
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: repeating-linear-gradient(
+    to bottom,
+    rgba(255,255,255,0.03) 0px,
+    rgba(255,255,255,0.03) 2px,
+    transparent 2px,
+    transparent 4px
+  );
+  pointer-events:none;
+}
+
+/* Animated hologram grid */
+.grid {
+  position:fixed;
+  top:0; left:0; width:100%; height:100%;
+  background:
+    linear-gradient(#0ff2 1px, transparent 1px),
+    linear-gradient(90deg, #f0f2 1px, transparent 1px);
+  background-size: 40px 40px;
+  animation: gridmove 15s linear infinite;
+  opacity:0.15;
+}
+@keyframes gridmove {
+  from {transform: translateY(0);}
+  to {transform: translateY(-400px);}
+}
+
+/* Splash intro */
+.splash {
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:black;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:#0ff;
+  font-size:40px;
+  letter-spacing:4px;
+  animation: splashfade 3s forwards;
+}
+@keyframes splashfade {
+  0% {opacity:1;}
+  80% {opacity:1;}
+  100% {opacity:0; display:none;}
+}
+
+/* Cyber heading typing effect */
+.typewriter {
+  overflow: hidden;
+  border-right: .15em solid #0ff;
+  white-space: nowrap;
+  animation: typing 3s steps(40, end), blink .75s step-end infinite;
+  font-size: 32px;
+  width: fit-content;
+  margin: 40px auto;
+}
+@keyframes typing { from { width: 0 } to { width: 100% } }
+@keyframes blink { 50% { border-color: transparent } }
+
+/* Hologram cards */
+.card {
+  border:1px solid #0ff9;
+  padding:20px;
+  margin:20px;
+  border-radius:12px;
+  background:linear-gradient(135deg, #080022aa, #200040aa);
+  box-shadow:0 0 25px #f0f8;
+  transition:0.25s;
+}
+.card:hover {
+  transform:scale(1.05) rotate(0.5deg);
+  box-shadow:0 0 40px #0ff;
+}
+
+/* Neon buttons */
+.button {
+  background:#f0f;
+  color:black;
+  padding:12px 20px;
+  border-radius:8px;
+  box-shadow:0 0 20px #f0f;
+  cursor:pointer;
+  transition:0.2s;
+  display:inline-block;
+  margin-top:10px;
+}
+.button:hover {
+  background:#0ff;
+  box-shadow:0 0 30px #0ff;
+}
+
+/* Toggle light/dark neon */
+.toggle {
+  cursor:pointer;
+  margin:20px;
+  color:#f0f;
+}
+.toggle:hover {
+  color:#0ff;
+}
+</style>
+</head>
+
+<body class="scanlines">
+
+<div class="grid"></div>
+<div class="splash">BOOTING SYSTEM...</div>
+
+<div class="toggle" onclick="toggleMode()">[ Toggle Neon Mode ]</div>
+
+<h1 class="typewriter">Prompt Database Pro — Cyberpunk v1.1</h1>
+
+<div id="list"></div>
+
+<script>
+let dark=false;
+function toggleMode(){
+  dark=!dark;
+  document.body.style.background = dark ? '#001800' : '#020010';
+  document.body.style.color = dark ? '#0f0' : '#0ff';
+}
+
+const prompts=[
+  {name:"Neon World Builder", prompt:"Generate a neon-lit cyberpunk city description: ____", tags:["cyber","world"]},
+  {name:"Glitch Translator", prompt:"Convert this text into glitch‑artifact style: ____", tags:["glitch","fx"]},
+  {name:"Holo Instructions", prompt:"Explain this like a hologram AI assistant: ____", tags:["holo","ai"]}
+];
+
+function render(){
+  const c=document.getElementById("list");
+  c.innerHTML="";
+  prompts.forEach(p=>{
+    c.innerHTML += `
+      <div class='card'>
+        <h2>${p.name}</h2>
+        <p>${p.prompt}</p>
+        <p><b>TAGS:</b> ${p.tags.join(", ")}</p>
+        <div class='button' onclick='navigator.clipboard.writeText("${p.prompt.replace(/"/g,'\"')}")'>
+          COPY PROMPT
+        </div>
+      </div>
+    `;
+  });
+}
+render();
+</script>
+
+</body>
+</html>
