Add Notion API integration and UI improvements
Introduced api.js to fetch prompts from a Notion database using environment variables for configuration. Updated index.html to load prompts from the new API endpoint, improved category sorting and rendering, refined CSS for clarity, and enhanced the splash screen and toggle mode logic.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Prompt Database Pro — Cyberpunk v1.1</title>
+<meta charset="UTF-8" />
+<title>Prompt Database Pro — Cyberpunk</title>
+
 <style>
-/* ===== GLOBAL STYLING ===== */
+/* ===== GLOBAL ===== */
 body {
   margin: 0;
   font-family: monospace;
@@ -18,8 +19,7 @@ body {
 .scanlines::before {
   content: "";
   position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  inset: 0;
   background: repeating-linear-gradient(
     to bottom,
     rgba(255,255,255,0.03) 0px,
@@ -30,12 +30,11 @@ body {
   pointer-events: none;
 }
 
-/* ===== ANIMATED GRID ===== */
+/* ===== GRID ===== */
 .grid {
   position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: 
+  inset: 0;
+  background:
     linear-gradient(#0ff2 1px, transparent 1px),
     linear-gradient(90deg, #f0f2 1px, transparent 1px);
   background-size: 40px 40px;
@@ -47,19 +46,17 @@ body {
   to { transform: translateY(-400px); }
 }
 
-/* ===== SPLASH INTRO ===== */
+/* ===== SPLASH ===== */
 .splash {
   position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  inset: 0;
   background: black;
   display: flex;
-  justify-content: center;
   align-items: center;
-  color: #0ff;
-  font-size: 40px;
+  justify-content: center;
+  font-size: 36px;
   letter-spacing: 4px;
-  animation: splashfade 2.8s forwards;
+  animation: splashfade 2.5s forwards;
 }
 @keyframes splashfade {
   0% { opacity: 1; }
@@ -67,7 +64,7 @@ body {
   100% { opacity: 0; }
 }
 
-/* ===== TYPEWRITER TITLE ===== */
+/* ===== HEADER ===== */
 .typewriter {
   overflow: hidden;
   border-right: .15em solid #0ff;
@@ -80,17 +77,28 @@ body {
 @keyframes typing { from { width: 0 } to { width: 100% } }
 @keyframes blink { 50% { border-color: transparent } }
 
-/* ===== CATEGORY HEADERS ===== */
+/* ===== TOGGLE ===== */
+.toggle {
+  margin: 20px;
+  cursor: pointer;
+  color: #f0f;
+  font-size: 18px;
+}
+.toggle:hover {
+  color: #0ff;
+  text-shadow: 0 0 10px #0ff;
+}
+
+/* ===== CATEGORY ===== */
 .cat-header {
   margin: 40px 20px 10px;
   font-size: 26px;
   color: #f0f;
-  text-shadow: 0 0 15px #f0f;
   border-bottom: 1px solid #f0f4;
-  padding-bottom: 5px;
+  text-shadow: 0 0 12px #f0f;
 }
 
-/* ===== PROMPT CARDS ===== */
+/* ===== CARDS ===== */
 .card {
   border: 1px solid #0ff9;
   padding: 20px;
@@ -105,7 +113,7 @@ body {
   box-shadow: 0 0 40px #0ff;
 }
 
-/* ===== BUTTONS ===== */
+/* ===== BUTTON ===== */
 .button {
   background: #f0f;
   color: black;
@@ -113,7 +121,6 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 20px #f0f;
   cursor: pointer;
-  transition: 0.2s;
   display: inline-block;
   margin-top: 10px;
 }
@@ -121,26 +128,13 @@ body {
   background: #0ff;
   box-shadow: 0 0 30px #0ff;
 }
-
-/* ===== TOGGLE BUTTON ===== */
-.toggle {
-  cursor: pointer;
-  margin: 20px;
-  color: #f0f;
-  font-size: 18px;
-  user-select: none;
-}
-.toggle:hover {
-  color: #0ff;
-  text-shadow: 0 0 10px #0ff;
-}
 </style>
 </head>
 
 <body class="scanlines">
 
 <div class="grid"></div>
-<div class="splash">BOOTING SYSTEM...</div>
+<div class="splash">BOOTING SYSTEM…</div>
 
 <div class="toggle" onclick="toggleMode()">[ Toggle Neon Mode ]</div>
 
@@ -151,44 +145,41 @@ body {
 <script>
 let dark = false;
 
-/* ===== TOGGLE NEON MODE ===== */
+/* ===== TOGGLE MODE ===== */
 function toggleMode() {
   dark = !dark;
-  document.body.style.background = dark ? '#001800' : '#020010';
-  document.body.style.color = dark ? '#0f0' : '#0ff';
+  document.body.style.background = dark ? "#001800" : "#020010";
+  document.body.style.color = dark ? "#0f0" : "#0ff";
 }
 
-/* ===== LOAD PROMPTS FROM JSON ===== */
+/* ===== LOAD PROMPTS FROM NOTION API ===== */
 async function loadPrompts() {
   try {
-    const res = await fetch("prompts.json");
-    let data = await res.json();
+    const res = await fetch("/api/prompts");
+    const data = await res.json();
 
-    // Sort data by category to ensure grouping works
-    data.sort((a, b) => {
-      const catA = (a.category || "").toUpperCase();
-      const catB = (b.category || "").toUpperCase();
-      if (catA < catB) return -1;
-      if (catA > catB) return 1;
-      return 0;
-    });
+    data.sort((a, b) =>
+      a.category.localeCompare(b.category)
+    );
 
     const container = document.getElementById("promptContainer");
     container.innerHTML = "";
 
     let currentCategory = "";
 
-    data.forEach(prompt => {
-      if (prompt.category !== currentCategory) {
-        currentCategory = prompt.category;
-        container.innerHTML += `<div class="cat-header">${currentCategory}</div>`;
+    data.forEach(p => {
+      if (p.category !== currentCategory) {
+        currentCategory = p.category;
+        container.innerHTML += `
+          <div class="cat-header">${currentCategory}</div>
+        `;
       }
 
       container.innerHTML += `
         <div class="card">
-          <h2>${prompt.title}</h2>
-          <p>${prompt.prompt}</p>
-          <div class="button" onclick='navigator.clipboard.writeText(\`${prompt.prompt}\`)'>
+          <h2>${p.title}</h2>
+          <p>${p.prompt}</p>
+          <div class="button" onclick="navigator.clipboard.writeText(\`${p.prompt}\`)">
             COPY PROMPT
           </div>
         </div>
@@ -196,22 +187,20 @@ async function loadPrompts() {
     });
 
   } catch (err) {
-    console.error("ERROR loading prompts.json:", err);
     document.getElementById("promptContainer").innerHTML =
-      "<p style='color:red'>Failed to load prompts.json</p>";
+      "<p style='color:red'>Failed to load prompts</p>";
+    console.error(err);
   }
 }
 
+/* ===== INIT ===== */
 document.addEventListener("DOMContentLoaded", () => {
   loadPrompts();
 
-  // Handle splash screen removal after animation
-  const splash = document.querySelector('.splash');
-  if (splash) {
-    splash.addEventListener('animationend', () => {
-      splash.style.display = 'none';
-    });
-  }
+  const splash = document.querySelector(".splash");
+  splash.addEventListener("animationend", () => {
+    splash.style.display = "none";
+  });
 });
 </script>
 
