--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
 <script>
 let allPrompts = [];
 
-/* ===== LOAD PROMPTS ===== */
+/* ===== LOAD PROMPTS FROM API ===== */
 async function loadPrompts() {
   try {
     const res = await fetch("/api/prompts");
@@ -217,6 +217,16 @@ function renderPrompts() {
 
 /* ===== INIT ===== */
 document.addEventListener("DOMContentLoaded", loadPrompts);
+</script>
+
+<!-- ===== VERCEL SPEED INSIGHTS (OPTION B) ===== -->
+<script>
+(function () {
+  const script = document.createElement("script");
+  script.src = "https://vercel.com/insights/script.js";
+  script.defer = true;
+  document.body.appendChild(script);
+})();
 </script>
 
 </body>
